--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,12 @@ pillow>=9.5.0
 tqdm>=4.65.0
 requests>=2.31.0
 
-# Local LLM interface
-ollama>=0.1.7
-
 # Hugging Face Hub integration
 huggingface-hub>=0.17.0
 safetensors>=0.4.0
+
+# Interface utilisateur avec support MCP
+gradio[mcp]>=4.0.0
 
 # Optional: Performance monitoring
 psutil>=5.9.0
