--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,17 @@
-# Core ML and AI libraries
+gradio>=5.43.1
 torch>=2.0.0
-sentence-transformers>=2.2.0
-transformers>=4.30.0
-faiss-cpu>=1.7.4
+torchvision>=0.15.0
+torchaudio>=2.0.0
+transformers>=4.45.0
+accelerate>=0.24.0
+safetensors>=0.3.0
+tokenizers>=0.15.0
+sentencepiece>=0.1.97
+huggingface_hub>=0.20.0
+faiss-cpu>=1.7.0
 numpy>=1.21.0
-accelerate>=0.20.0
-
-# MLX (Mac only - optional)
-mlx>=0.4.0
-mlx-vlm>=0.0.8
-
-# Document processing
-beautifulsoup4>=4.12.0
-markdown>=3.4.0
-pillow>=9.5.0
-
-# Utilities
-tqdm>=4.65.0
-requests>=2.31.0
-
-# Hugging Face Hub integration
-huggingface-hub>=0.17.0
-safetensors>=0.4.0
-
-# Interface utilisateur avec support MCP
-gradio[mcp]>=4.0.0
-
-# Optional: Performance monitoring
-psutil>=5.9.0
+scipy>=1.9.0
+python-dotenv>=1.0.0
+sentence-transformers>=3.0.0
+flash-attn>=2.0.0
+spaces
